# local-notes-search

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.toml  conventions.example.md  pyproject.toml
notes_search/: __init__.py  chunker.py  cli.py  config.py  indexer.py  ollama_client.py  rag.py  store.py
