[project]
name = "local-notes-search"
version = "0.1.0"
description = "Semantic search and RAG over a folder of local Markdown notes (e.g. an Obsidian vault), powered by a local Ollama model."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "ollama>=0.3.0",
    "lancedb>=0.13.0",
    "rich>=13.7.0",
]

[project.scripts]
notes-search = "notes_search.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notes_search"]
